
    TODO: Refactor status menu item menu generation from output to share code between ScriptExec and Platypus.app
    TODO: Drag and drop from icon view should be file based, not TIFF pasteboard data
    TODO: ScriptExec app should remember window size
    TODO: Dropping file without suffix shouldn't add to bundled files (or should it?)

    * Added new WebViewDroplet example which lists dropped files using HTML output
    * Fixed critical issue with Web View interface type
    * Automatic app name generation from script name now respects camelCase and strips whitespace
    * Using NSString constants for NSUserDefault string keys
    * clearAllFields method uses default spec to set controls
    * Give image names for interface type and interpreter a filename prefix indicating family
    * Added build script for cat2html
    * Added support for multiple arguments to --bundled-file in command line tool via "|" separator
    * Various minor UI improvements (button status in args & drop settings window)
    * Now treating drop into STPathTextField like any other drop on window
    * Editable type lists in drop settings are now click-editable like those in Args controller
    * Output string "----\n" in Status Menu mode now creates menu separator item
    * Uniform Type Identifiers and Application Bundle Identifiers are now validated
    * New template processing option for Status Item icon
    * Build script now generates sparkle hash
    * More robust command line tool version checking
    * Fixed issue where showing the Preferences window lagged due to icon fetching on main thread
    * Args button title now shows the number of custom arguments that have been set
    * UTIs are now used for default file types in Drop Settings (public.item and public.folder)
    * Move project over to ARC

For 5.0
    * Long GNU named params for command line tool, e.g. --some-option
    * Fixed issue where ScriptExec quit before script output was parsed